--- a/05.01-What-Is-Machine-Learning.ipynb
+++ b/05.01-What-Is-Machine-Learning.ipynb
@@ -9,10 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Before we take a look at the details of several machine learning methods, let's start by looking at what machine learning is, and what it isn't.\n",
     "Machine learning is often categorized as a subfield of artificial intelligence, but I find that categorization can be misleading.\n",
@@ -27,10 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Categories of Machine Learning\n",
     "\n",
@@ -50,27 +44,19 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Qualitative Examples of Machine Learning Applications\n",
     "\n",
     "To make these ideas more concrete, let's take a look at a few very simple examples of a machine learning task.\n",
     "These examples are meant to give an intuitive, non-quantitative overview of the types of machine learning tasks we will be looking at in this part of the book.\n",
-    "In later chapters, we will go into more depth regarding the particular models and how they are used.\n",
-    "For a preview of these more technical aspects, you can find the Python source that generates the following figures in the online [appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb).\n"
+    "In later chapters, we will go into more depth regarding the particular models and how they are used.\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Classification: Predicting Discrete Labels\n",
     "\n",
@@ -81,20 +67,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-classification-1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This data is two-dimensional: that is, we have two *features* for each point, represented by the (x,y) positions of the points on the plane.\n",
     "In addition, we have one of two *class labels* for each point, here represented by the colors of the points.\n",
@@ -109,20 +89,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-classification-2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Now that this model has been trained, it can be generalized to new, unlabeled data.\n",
     "In other words, we can take a new set of data, draw this line through it, and assign labels to the new points based on this model (see the following figure).\n",
@@ -131,20 +105,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-classification-3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This is the basic idea of a classification task in machine learning, where \"classification\" indicates that the data has discrete class labels.\n",
     "At first glance this may seem trivial: it's easy to look at our data and draw such a discriminatory line to accomplish this classification.\n",
@@ -164,10 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Regression: Predicting Continuous Labels\n",
     "\n",
@@ -178,20 +143,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-regression-1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "As with the classification example, we have two-dimensional data: that is, there are two features describing each data point.\n",
     "The color of each point represents the continuous label for that point.\n",
@@ -205,20 +164,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-regression-2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Notice that the *feature 1–feature 2* plane here is the same as in the two-dimensional plot in Figure 37-4; in this case, however, we have represented the labels by both color and three-dimensional axis position.\n",
     "From this view, it seems reasonable that fitting a plane through this three-dimensional data would allow us to predict the expected label for any set of input parameters.\n",
@@ -227,20 +180,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-regression-3.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "This plane of fit gives us what we need to predict labels for new points.\n",
     "Visually, we find the results shown in the following figure:"
@@ -248,20 +195,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-regression-4.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "As with the classification example, this task may seem trivial in a low number of dimensions.\n",
     "But the power of these methods is that they can be straightforwardly applied and evaluated in the case of data with many, many features.\n",
@@ -280,10 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Clustering: Inferring Labels on Unlabeled Data\n",
     "\n",
@@ -296,20 +234,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-clustering-1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "By eye, it is clear that each of these points is part of a distinct group.\n",
     "Given this input, a clustering model will use the intrinsic structure of the data to determine which points are related.\n",
@@ -318,20 +250,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-clustering-2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "*k*-means fits a model consisting of *k* cluster centers; the optimal centers are assumed to be those that minimize the distance of each point from its assigned center.\n",
     "Again, this might seem like a trivial exercise in two dimensions, but as our data becomes larger and more complex such clustering algorithms can continue to be employed to extract useful information from the dataset.\n",
@@ -342,10 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Dimensionality Reduction: Inferring Structure of Unlabeled Data\n",
     "\n",
@@ -358,20 +281,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-dimesionality-1.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Visually, it is clear that there is some structure in this data: it is drawn from a one-dimensional line that is arranged in a spiral within this two-dimensional space.\n",
     "In a sense, you could say that this data is \"intrinsically\" only one-dimensional, though this one-dimensional data is embedded in two-dimensional space.\n",
@@ -382,20 +299,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "![](figures/05.01-dimesionality-2.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Notice that the colors (which represent the extracted one-dimensional latent variable) change uniformly along the spiral, which indicates that the algorithm did in fact detect the structure we saw by eye.\n",
     "As with the previous examples, the power of dimensionality reduction algorithms becomes clearer in higher-dimensional cases.\n",
@@ -407,10 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Summary\n",
     "\n",
@@ -429,9 +337,7 @@
     "  - *Clustering*: Models that detect and identify distinct groups in the data\n",
     "  - *Dimensionality reduction*: Models that detect and identify lower-dimensional structure in higher-dimensional data\n",
     "  \n",
-    "In the following sections we will go into much greater depth within these categories, and see some more interesting examples of where these concepts can be useful.\n",
-    "\n",
-    "All of the figures in the preceding discussion are generated based on actual machine learning computations; the code behind them can be found in [Appendix: Figure Code](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb)."
+    "In the following sections we will go into much greater depth within these categories, and see some more interesting examples of where these concepts can be useful."
    ]
   }
  ],
@@ -455,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
