--- a/05.06-Linear-Regression.ipynb
+++ b/05.06-Linear-Regression.ipynb
@@ -418,9 +418,7 @@
     "editable": true
    },
    "source": [
-    "![](figures/05.06-gaussian-basis.png)\n",
-    "\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb)"
+    "![](figures/05.06-gaussian-basis.png)\n"
    ]
   },
   {
