--- a/05.08-Random-Forests.ipynb
+++ b/05.08-Random-Forests.ipynb
@@ -59,8 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](figures/05.08-decision-tree.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Decision-Tree-Example)"
+    "![](figures/05.08-decision-tree.png)\n"
    ]
   },
   {
@@ -123,8 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](figures/05.08-decision-tree-levels.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Decision-Tree-Levels)"
+    "![](figures/05.08-decision-tree-levels.png)\n"
    ]
   },
   {
@@ -228,13 +226,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you're running this notebook live, you can use the helper script included in the online [appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Helper-Code) to bring up an interactive visualization of the decision tree building process:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
@@ -260,7 +251,6 @@
     }
    ],
    "source": [
-    "# helpers_05_08 is found in the online appendix\n",
     "import helpers_05_08\n",
     "helpers_05_08.plot_tree_interactive(X, y);"
    ]
@@ -288,8 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](figures/05.08-decision-tree-overfitting.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Decision-Tree-Overfitting)"
+    "![](figures/05.08-decision-tree-overfitting.png)\n"
    ]
   },
   {
@@ -333,7 +322,6 @@
     }
    ],
    "source": [
-    "# helpers_05_08 is found in the online appendix\n",
     "import helpers_05_08\n",
     "helpers_05_08.randomized_tree_interactive(X, y)"
    ]
