--- a/05.09-Principal-Component-Analysis.ipynb
+++ b/05.09-Principal-Component-Analysis.ipynb
@@ -257,8 +257,7 @@
     "editable": true
    },
    "source": [
-    "![](figures/05.09-PCA-rotation.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Principal-Components-Rotation)"
+    "![](figures/05.09-PCA-rotation.png)\n"
    ]
   },
   {
@@ -542,8 +541,7 @@
     "editable": true
    },
    "source": [
-    "![](figures/05.09-digits-pixel-components.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Digits-Pixel-Components)"
+    "![](figures/05.09-digits-pixel-components.png)\n"
    ]
   },
   {
@@ -583,8 +581,7 @@
     "editable": true
    },
    "source": [
-    "![](figures/05.09-digits-pca-components.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Digits-PCA-Components)"
+    "![](figures/05.09-digits-pca-components.png)\n"
    ]
   },
   {
