--- a/05.11-K-Means.ipynb
+++ b/05.11-K-Means.ipynb
@@ -182,16 +182,14 @@
     "The literature about this algorithm is vast, but can be summarized as follows: under typical circumstances, each repetition of the E-step and M-step will always result in a better estimate of the cluster characteristics.\n",
     "\n",
     "We can visualize the algorithm as shown in the following figure.\n",
-    "For the particular initialization shown here, the clusters converge in just three iterations.\n",
-    "(For an interactive version of this figure, refer to the code in the online [appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Interactive-K-Means).)"
+    "For the particular initialization shown here, the clusters converge in just three iterations.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![(run code in Appendix to generate image)](figures/05.11-expectation-maximization.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Expectation-Maximization)"
+    "![](figures/05.11-expectation-maximization.png)\n"
    ]
   },
   {
