--- a/05.12-Gaussian-Mixtures.ipynb
+++ b/05.12-Gaussian-Mixtures.ipynb
@@ -540,8 +540,7 @@
     "editable": true
    },
    "source": [
-    "![(Covariance Type)](figures/05.12-covariance-type.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Covariance-Type)"
+    "![(Covariance Type)](figures/05.12-covariance-type.png)\n"
    ]
   },
   {
