--- a/05.05-Naive-Bayes.ipynb
+++ b/05.05-Naive-Bayes.ipynb
@@ -142,8 +142,7 @@
     "editable": true
    },
    "source": [
-    "![(run code in Appendix to generate image)](figures/05.05-gaussian-NB.png)\n",
-    "[figure source in Appendix](https://github.com/jakevdp/PythonDataScienceHandbook/blob/master/notebooks/06.00-Figure-Code.ipynb#Gaussian-Naive-Bayes)"
+    "![](figures/05.05-gaussian-NB.png)\n"
    ]
   },
   {
